# Certstra

./: .gitignore  CHANGELOG.md  README.md  certstra_run.py  cli.py  pyproject.toml
.pgf/: DESIGN-Certstra.md  status-Certstra.json
certstra_core/: __init__.py  certify.py  determinism.py  fingerprint.py  ledger.py  provenance.py  stage_schedule.py  verdict.py
certstra_packs/: _base.py  bio_clock.py  cert_mesh.py  loader.py  orbi_roam.py  release_mesh.py  robo_trace.py
scripts/: release.sh  smoke.sh
tests/: test_bio_clock_parity.py  test_core.py  test_orbi_roam_parity.py
